--- a/peter.css
+++ b/peter.css
@@ -50,6 +50,8 @@ header {
 
 .container {
     display: flex;
+    flex-wrap: wrap;
+    gap: 10px;
     justify-content: space-between;
     align-items: center;
     max-width: 1500px;
@@ -154,13 +156,13 @@ header {
     margin-top: 20px;
 }
 
-.container {
+/* .container {
     display: flex;
     justify-content: center;
     flex-wrap: wrap;
     gap: 20px;
     margin: 20px;
-}
+} */
 
 .image-box {
     width: 200px;
