--- a/Style-peter.css
+++ b/Style-peter.css
@@ -22,13 +22,43 @@ header {
     justify-content: space-between;
     align-items: center;
     padding: 10px 20px;
-    background-color: #000;
+    background-color: #000000;
+    color: white;
+}
+
+.logo img {
+    height: 50px;
+}
+
+/* Style for the navigation links */
+.nav-links {
+    list-style: none;
+    display: flex;
+    gap: 15px;
+}
+
+.nav-links a {
+    text-decoration: none;
+    color: white;
+    font-size: 18px;
+}
+
+/* Hamburger menu style */
+.nav {
+    font-size: 30px;
+    display: none;
+    cursor: pointer;
+}
+
+/* Hide checkbox */
+.nav-toggle {
+    display: none;
 }
 
 .logo {
     flex-grow: 1;
 }
-.logo img{
+/* .logo img{
     width: 50px;
     height: auto;
 }
@@ -39,18 +69,18 @@ header {
     gap: 20px;
     margin: 0; 
     padding: 0; 
-}
+} */
 
 .nav-links li {
     display: inline;
 }
 
-.nav-links a {
+/* .nav-links a {
     text-decoration: none;
     color: #fff;
     font-size: 16px;
     padding: 10px 15px;
-}
+} */
 .nav-links a:hover{
     color: #c71515;
 }
@@ -320,7 +350,7 @@ footer{
 }
 
 /* Responsive */
-@media (min-width: 600px) and (max-width: 1200px){
+@media (min-width: 800px) and (max-width: 1200px){
 
    .text-content img{
     z-index: 1;
@@ -344,11 +374,13 @@ footer{
    .slideshow-container{
     position: relative;
     bottom: 100px;
+    right: 30px;
    }
    .dot-Container{
     position: relative;
     bottom: 50px;
    }
+
    footer{
     display: flex;
     width:100%;
@@ -367,19 +399,48 @@ footer{
        display: flex;
        justify-content: center;
        align-items: center;
-       margin-left: 50px;
     
     }
-    .slideshow-container{
-        margin-left: 70px;
+    .nav-links {
+        display: none;
+        flex-direction: column;
+        position: absolute;
+        top: 60px;
+        left: 0;
+        width: 100%;
+        background-color: black;
+        padding: 10px 0;
+    }
+
+    .nav-links li {
+        text-align: center;
+        padding: 10px 0;
+    }
+
+    .nav {
+        display: block;
+    }
+
+    .nav-toggle:checked + .nav + .nav-links {
+        display: flex;
     }
     .spidey-image img{
         display: none;
        }
-    .spidey-about-image img{
-        position: relative;
-        bottom: 50px;
+    .slideshow-container{
+        margin-left: 120px;
+    
     }
+    .about-text h2{
+        margin-top: 150px;
+    }
+    .about-text p{
+        margin-top: 20px;
+    }
+    .spidey-about-image img{
+        bottom: 20px;
+    }
+
     footer{
         display: flex;
         width: 600px;
@@ -393,3 +454,20 @@ footer{
     }
 }
 
+@media(max-width: 500px){
+    .wrapper{
+        display: flex ;
+        justify-content: center;
+        align-items: center ;
+        flex-direction: column;
+        /* margin-left: 20px; */
+    }
+    .slideshow-container{
+        position: relative;
+        right: 30px;
+    }
+    .gallery-section, .villains-section{
+        margin-left: 60px;
+    }
+    
+}
